src/tests/code/pass/pass_operator_decrement.u
entrypoint:~()
{
	iErrorCode:~i64{42};
	--iErrorCode;
}
->(iErrorCode)