src/tests/code/fail/fail_variable_shadowing_function.u
predecessor:(x:i64)->(x-1)

entrypoint:~()
{
	predecessor:i64{42};
}
->(predecessor)